修改我的代码

--- a/src/app.wxss
+++ b/src/app.wxss
@@ -1,17 +1,19 @@
 /**  全局样式  **/
 
-@import '/styles/view.wxss';
-@import '/styles/text.wxss';
-@import '/styles/image.wxss';
+@import "/styles/view.wxss";
+@import "/styles/text.wxss";
+@import "/styles/image.wxss";
 
 Page {
   min-height: 100vh;
   display: flex;
   position: relative;
   flex-direction: column;
-  background-color: #F8F8F8;
-  font-weight: 400;
-  font-family: PingFangSC-Medium;
+  background-color: #f5f5f5;
+  font-size: 28rpx;
+  font-weight: 500;
+  font-family: PingFangSC-Regular;
+  /* font-family: PingFangSC-Medium; */
 }
 
 .container {
@@ -31,16 +33,10 @@ Page {
   flex-direction: column;
 }
 
-.row-center {
-  display: flex;
-  flex-direction: row;
+.ai-center {
   align-items: center;
-  justify-content: center;
 }
-.column-center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.jc-center {
   justify-content: center;
 }
 
@@ -48,23 +44,25 @@ Page {
   align-items: center;
   justify-content: center;
 }
-
+.flex {
+  flex: 1;
+}
 /* 实心按钮 */
-.a-btn-hover {
+.btn-hover {
   /* position: relative; */
   opacity: 0.8;
   transform: scale(0.97, 0.97);
-  background-color: #E3E3E3;
+  background-color: #e3e3e3;
 }
 
-.a-btn-hover3 {
+.btn-hover3 {
   top: 2rpx;
   opacity: 0.96;
   position: relative;
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
 }
 
-.a-hover {
+.hover {
   opacity: 0.94;
   transform: scale(0.96, 0.96);
   background-color: rgba(0, 0, 0, 0);
@@ -82,12 +80,11 @@ Page {
   background-color: #F3F3F3;
 */
 
-
 /* 镂空按钮 */
 .plain-hover {
   position: relative;
   top: 2rpx;
-  box-shadow: 0px 0px 16rpx #CCC inset;
+  box-shadow: 0px 0px 16rpx #ccc inset;
 }
 
 /* 按钮去边框 */
