--- a/src/pages/my/my.wxml
+++ b/src/pages/my/my.wxml
@@ -1,46 +1,44 @@
 <!--  -->
-<view class="m-container">
-	<!-- <header back="{{false}}"/> -->
-	<!-- 顶部栏 -->
-	<image class="top-bg" mode="aspectFill" src="/images/img/top_m.jpeg" />
-	<view class="top-layout">
-		<view class="user-box" bindtap="onInfoPress">
-			<image class="user-icon" src="{{user.avatar}}" />
-			<view style="flex: 1">
-				<view class="user-name" hover-class="a-hover">{{user.nickName}}</view>
-				<view class="actives">{{user.province}}</view>
-				<view class="a-row" style="margin-top: 24rpx">
-					<view class="user-text" hover-class="a-hover" hover-stop-propagation="true" >1<text class="user-tab">收藏</text></view>
-					<view class="user-text" hover-class="a-hover" hover-stop-propagation="true">2<text class="user-tab">点读</text></view>
-					<view class="user-text" hover-class="a-hover" hover-stop-propagation="true">3<text class="user-tab">关注</text></view>
-				</view>
-			</view>
-			<!-- <image class="a-next-icon" src="/images/icon/wnext_ic.png" /> -->
-		</view>
-	</view>
-	<!-- tab -->
-	<view wx:if="{{1==1}}" class="tab-box">
-		<view class="tab-view" hover-class="a-btn-hover3" data-index="0" bindtap="onTabPress">
-			<image class="a-tab-icon" src="/images/icon/huati.png"/>
-			<view class="a-tab-value">我的作品</view>
-		</view>
-		<view class="tab-view" hover-class="a-btn-hover3" data-index="1" bindtap="onTabPress">
-			<image class="a-tab-icon" src="/images/icon/huodong.png"/>
-			<view class="a-tab-value">今日活动</view>
-		</view>
-		<view class="tab-view" hover-class="a-btn-hover3" data-index="2" bindtap="onTabPress">
-			<image class="a-tab-icon" src="/images/icon/t_down.png"/>
-			<view class="a-tab-value">下载记录</view>
-		</view>
-	</view>
-	<!-- 内容列表 -->
-	<view class="menu-list">
-		<block wx:for="{{tablist}}" wx:key="index">
-			<view class="item-box" hover-class="a-btn-hover3" bindtap="onPressItem" data-index="{{index}}">
-				<image class="a-item-icon" src="{{item.icon}}"/>
-				<view class="a-item-value" style="flex: 1">{{item.value}}</view>
-				<image class="a-next-icon" src="/images/icon/next_ic.png"/>
-			</view>
-		</block>
-	</view>
+<view class="container my">
+  <header fixed="{{false}}" back="{{false}}" opacity="{{0}}" />
+  <!-- 顶部栏 -->
+  <image class="top-bg" src="/images/img/top_m.jpeg"/>
+  <view class="top-layout">
+    <image class="user-icon" bindtap="onUserInfo" src="{{user.icon||'/images/icon/user_ic.png'}}" />
+    <view class="column" bindtap="onUserInfo">
+      <text class="user-name">{{user.nickName}}</text>
+      <text class="user-phone">{{user.phone}}</text>
+    </view>
+  </view>
+  <!-- tab -->
+  <view class="row tab-box">
+    <view class="column center tab-view" hover-class="btn-hover" data-idx="0" bindtap="onTabClick">
+      <text class="tab-num">{{integrate}}</text>
+      <text class="tab-value">积分</text>
+    </view>
+    <view class="column center tab-view" hover-class="btn-hover" data-idx="1" bindtap="onTabClick">
+      <text class="tab-num">{{couponNum}}</text>
+      <text class="tab-value">收藏</text>
+    </view>
+    <view class="column center tab-view" hover-class="btn-hover3" data-idx="2" bindtap="onTabClick">
+      <text class="tab-num">{{footprint}}</text>
+      <text class="tab-value">足迹</text>
+    </view>
+  </view>
+  <!-- 活动 -->
+  <view class="activity-box" bindtap="gotoCouponPage">
+
+  </view>
+  <!-- 内容列表 -->
+  <view class="row label-box">
+    <text class="flex label-name">菜单栏</text>
+  </view>
+  <view class="menu-list">
+    <block wx:for="{{menulist}}" wx:key="index">
+      <view class="column center menu-box" bindtap="onMenuClick" data-idx="{{index}}">
+        <image class="menu-icon" src="{{item.icon}}" />
+        <view class="menu-value">{{item.name}}</view>
+      </view>
+    </block>
+  </view>
 </view>
