--- a/src/pages/sort/sort.wxml
+++ b/src/pages/sort/sort.wxml
@@ -1,31 +1,31 @@
 <!--  -->
-<view class="s-container">
-  <header back="{{false}}" title="分类" />
-  <swiper class="swiper-box" indicator-dots="{{indicator}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-    <block wx:for="{{banners}}" wx:key="item">
-      <swiper-item class="swiper-item">
-        <image class="swiper-item" src="{{item}}" mode="aspectFill" />
-      </swiper-item>
-    </block>
-  </swiper>
-  <!-- 内容栏 -->
-  <view class="row sort-box">
-    <view class="sort-tab-box">
-      <block wx:for="1234567i" wx:key="index">
-        <view class="sort-tab-view {{tabIndex == index ? 'sort-tab-sel':''}}" bindtap="onChangeTab" data-tag="{{index}}">
-          <text class="">啊哈哈</text>
+<view class="container sort">
+    <header back="{{false}}" title="分类" />
+    <swiper class="swiper-box" indicator-dots="{{indicator}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+        <block wx:for="{{banners}}" wx:key="item">
+            <swiper-item class="swiper-item">
+                <image class="swiper-item" src="{{item}}" mode="aspectFill" />
+            </swiper-item>
+        </block>
+    </swiper>
+        <!-- 内容栏 -->
+        <view class="flex row sort-box">
+            <view class="sort-tab-box">
+                <block wx:for="1234567i" wx:key="index">
+                    <view class="sort-tab-view {{tabIndex == index ? 'sort-tab-sel':''}}" bindtap="onChangeTab" data-tag="{{index}}">
+                        <text class="">啊哈哈</text>
+                    </view>
+                </block>
+            </view>
+            <!--  -->
+            <view class="sort-grid">
+                <block wx:for="{{pageList}}" wx:key="item">
+                    <view class="item-box" bindtap="onPressItem" data-tag="{{item.src}}">
+                        <image class="item-img" mode="aspectFill" src="{{item.src}}" />
+                        <view class="row center item-text item-mark"> {{item.name}}</view>
+                    </view>
+                </block>
+            </view>
+            <empty wx:if="{{pageList.length < 1}}" />
         </view>
-      </block>
-    </view>
-    <!--  -->
-    <view class="sort-grid">
-      <block wx:for="{{pageList}}" wx:key="item">
-        <view class="item-box" bindtap="onPressItem" data-tag="{{item.src}}">
-            <image class="item-img" mode="aspectFill" src="{{item.src}}" />
-            <view class="item-text item-mark column-center"> {{item.name}}</view>
-        </view>
-      </block>
-    </view>
-    <empty wx:if="{{pageList.length < 1}}" />
-  </view>
 </view>
