--- a/src/styles/image.wxss
+++ b/src/styles/image.wxss
@@ -1,31 +1,25 @@
 /* 图片样式 */
-
-.a-huati-img {
-  width: 144rpx;
-  height: 144rpx;
-  border-radius: 6rpx;
-}
-
-.a-next-icon {
+.next-icon {
   width: 36rpx;
   height: 36rpx;
-  margin-left: 12rpx;
+  margin-left: 6rpx;
 }
-
-.a-item-icon {
-  width: 40rpx;
-  height: 40rpx;
-  margin-right: 24rpx;
+.item-icon {
+  width: 48rpx;
+  height: 48rpx;
+  margin-right: 16rpx;
 }
-
-.a-tab-icon {
-  width: 56rpx;
-  height: 56rpx;
+.user-icon {
+  width: 64rpx;
+  height: 64rpx;
+  border-radius: 50%;
+  margin-right: 20rpx;
+  background-color: lightblue;
 }
 
 .img-hover {
   /* position: relative; */
   opacity: 0.87;
   transform: scale(0.97, 0.97);
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
 }
