--- a/src/components/header/header.wxml
+++ b/src/components/header/header.wxml
@@ -1,7 +1,6 @@
-<view class="weui-navigation-bar {{extClass}}">
+<view class="weui-navigation-bar">
 	<view wx:if="{{fixed}}" class="weui-navigation-bar__placeholder {{ios ? 'ios' : 'android'}}" style="padding-top: {{statusBarHeight}}px;visibility: hidden;"></view>
-	<view class="weui-navigation-bar__inner {{ios ? 'ios' : 'android'}}" style="padding-top: {{statusBarHeight}}px; color: {{color}};background: {{background}};{{displayStyle}};{{innerPaddingRight}};{{innerWidth}};">
-
+	<view class="weui-navigation-bar__inner {{ios ? 'ios' : 'android'}}" style="padding-top: {{statusBarHeight}}px;color:{{color}};opacity:{{opacity}};background:{{background}};{{displayStyle}}">
 		<view class='weui-navigation-bar__left' style="{{leftWidth}}">
 			<block wx:if="{{back}}">
 				<view class="weui-navigation-bar__buttons">
