--- a/src/pages/home/home.wxss
+++ b/src/pages/home/home.wxss
@@ -1,8 +1,6 @@
 /*  */
-.h-container {
+.home {
   flex: 1;
-  display: flex;
-  flex-direction: column;
   background-color: white;
 }
 .tab-box {
@@ -35,12 +33,12 @@
 
 .swiper-box {
   margin: 0 24rpx;
-  height: 280rpx;
+  height: 220rpx;
 }
 .swiper-item {
   width: 100%;
-  height: 280rpx;
-  border-radius: 6rpx;
+  height: 220rpx;
+  border-radius: 8rpx;
 }
 
 /* 话题 */
@@ -55,15 +53,15 @@
   display: none;
 }
 .huati-box {
-  min-width: 180rpx;
-  width: 180rpx;
+  min-width: 150rpx;
+  width: 150rpx;
   display: flex;
-  margin-right: 8rpx;
+  margin-right: 16rpx;
 }
 
 .huati-item {
-  width: 160rpx;
-  height: 88rpx;
+  width: 150rpx;
+  height: 80rpx;
   border-radius: 8rpx;
 
   color: white;
