--- a/src/pages/sort/sort.wxss
+++ b/src/pages/sort/sort.wxss
@@ -1,20 +1,17 @@
 /* sort */
-.s-container {
+.sort {
   flex: 1;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
   background-color: white;
 }
 
 .swiper-box {
   margin: 16rpx 22rpx 20rpx 22rpx;
-  height: 16vh; /* 200rpx */
+  height: 220rpx; /* 200rpx */
 }
 .swiper-item {
   width: 100%;
-  height: 16vh;
-  border-radius: 6rpx;
+  height: 220rpx;
+  border-radius: 8rpx;
 }
 .sort-box {
   
@@ -22,7 +19,6 @@
 .sort-tab-box {
   width: 186rpx;
   min-width: 186rpx;
-  max-height: 71vh;
   overflow-y: scroll;
   border-right: solid 1rpx #e0e0e0;
 }
@@ -38,40 +34,38 @@
   color: white;
   font-size: 34rpx;
   font-weight: 600;
-  background-color: #232323;
+  background-color: #323232;
 }
 
 /* 列表 */
 .sort-grid {
   flex: 1;
-  max-height: 71vh;
+  height: 100%;
   overflow-y: scroll;
   display: grid;
-  column-gap: 20rpx;
-  row-gap: 20rpx;
-  grid-template-rows: repeat(10, 180rpx);
-  grid-template-columns: repeat(2, 250rpx);
-  /* background-color: salmon; */
+  column-gap: 24rpx;
+  row-gap: 24rpx;
+  margin: 32rpx;
+  justify-content: center;
+  grid-template-rows: repeat(3, 200rpx);
+  grid-template-columns: repeat(2, 1fr);
 }
 .item-box {
-  width: 250rpx;
-  height: 180rpx;
-  margin-left: 20rpx;
+  height: 200rpx;
   position: relative;
 }
 .item-img {
   width: 100%;
-  height: 180rpx;
+  height: 200rpx;
   border-radius: 12rpx;
   background-color: violet;
 }
 .item-mark {
   width: 100%;
-  height: 180rpx;
-  /* top: 0; */
-  bottom: 0;
+  height: 200rpx;
+  top: 0;
+  left: 0;
   position: absolute;
-  
   border-radius: 12rpx;
   background-color: rgba(0, 0, 0, 0.1);
 }
