--- a/src/styles/text.wxss
+++ b/src/styles/text.wxss
@@ -1,41 +1,47 @@
 /*  */
-
-.a-item-value {
+.title {
+  color: #232323;
+  font-size: 36rpx;
+  font-weight: 500;
+  font-family: PingFangSC-Medium;
+}
+.subtitle {
   color: #393939;
+  font-size: 30rpx;
+  line-height: 40rpx;
+}
+.value {
+  color: #323232;
   font-size: 32rpx;
 }
-
-.a-tab-value {
-  color: #393939;
-  font-size: 30rpx;
-  line-height: 48rpx;
-}
-
-.a-title {
-  color: #222222;
-  font-size: 34rpx;
-  font-weight: 700;
-}
-
-.a-label {
-  color: #333333;
+.label {
+  color: #323232;
   font-size: 30rpx;
 }
-.a-info {
-  color: #333333;
-  font-size: 26rpx;
+.desc {
+  color: #636363;
+  font-size: 30rpx;
+  line-height: 40rpx;
 }
-.a-ellips {
+.info {
+  color: #636363;
+  font-size: 28rpx;
+}
+.date {
+  color: #979797;
+  font-size: 24rpx;
+}
+.ellips {
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-.a-ellip {
+.ellip {
   white-space: nowrap;
   text-overflow: ellipsis;
-  -o-text-overflow:ellipsis;
+  -o-text-overflow: ellipsis;
 }
-.a-indent {
-  text-indent: 2em
+.indent {
+  text-indent: 2em;
 }
